tests/regression/errors/basic/type_error_19.csd
// Type error test 19
sus number drip = 19
sus text tea = "string_19"
sus wrong drip = text  // Type mismatch
vibez.spill("Type error 19:", wrong)
